# MetroPulse

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  SETUP.md  SPEC.md  docker-compose.yml  status.md
backend/: .env.example  Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  main.py  realtime.py  realtime_models.py
backend/app/core/: __init__.py  provenance.py
backend/app/rag/: __init__.py  coefficient_extractor.py  confidence.py  evidence_pack.py  models.py  prompts.py  retriever.py
backend/app/routes/: case_studies.py  health.py  realtime.py  regions.py  simulations.py
backend/app/simulation/: __init__.py  confidence.py  explainability.py  overlay.py
backend/app/ws/: simulation.py
backend/engine/: config.py  grid.py  models.py  overlay.py  prediction_generator.py  primary_loop.py  provenance.py  runner.py  scenario_parser.py  secondary_loop.py  serializer.py  simulation_explainability.py  tertiary_loop.py  translator.py
backend/engine/nl_engine/: __init__.py  conversation.py  domain_maps.py  group_scorer.py  ollama_parser.py  regex_parser.py  router.py  spacy_parser.py
backend/tests/integration/: test_rest_endpoints.py  test_ws_simulation.py
backend/tests/load/: locustfile.py
backend/tests/unit/: test_case_study_matching.py  test_conversation.py  test_credibility_system.py  test_domain_maps.py  test_grid.py  test_group_scorer.py  test_primary_loop.py  test_provenance.py  test_realtime.py  test_regex_parser.py  test_router.py  test_scenario_parser.py  test_secondary_loop.py  test_serializer.py  (+2 more)
(+115 files in other folders)
