[project]
name = "metropulse-backend"
version = "1.0.0"
description = "MetroPulse Simulation Engine & API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "numpy>=1.26,<2.0",
    "scipy>=1.12,<2.0",
    "h3>=4.0,<5.0",
    "httpx>=0.27,<1.0",
    "websockets>=13.0,<17.0",
    "supabase-py>=2.5,<3.0",
    "openai>=1.14,<2.0",
    "google-genai>=2.0,<3.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "spacy>=3.7,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-benchmark>=4.0,<5.0",
    "locust>=2.25,<3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
